Correct style for headline elements: Mobile and destok version

--- a/index.html
+++ b/index.html
@@ -59,88 +59,90 @@
     </section>
 
     <section id="works">
-      <h2 class="section-title">My Recent Works</h2>
-      <hr />
-      <ul>
-        <li class="work">
-          <img src="#" alt="project image" />
-          <div>
-            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-            <ul class="list-tag">
-              <li class="tags">Ruby on rails</li>
-              <li class="tags">css</li>
-              <li class="tags">JavaScript</li>
-              <li class="tags">html</li>
-            </ul>
-            <button class="buttons">See Project</button>
-          </div>
-        </li>
-        <li class="work">
-          <img src="#" alt="project image" />
-          <div>
-            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-            <ul class="list-tag">
-              <li class="tags">Ruby on rails</li>
-              <li class="tags">css</li>
-              <li class="tags">JavaScript</li>
-              <li class="tags">html</li>
-            </ul>
-            <button class="buttons">See Project</button>
-          </div>
-        </li>
-        <li class="work">
-          <img src="#" alt="project image" />
-          <div>
-            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-            <ul class="list-tag">
-              <li class="tags">Ruby on rails</li>
-              <li class="tags">css</li>
-              <li class="tags">JavaScript</li>
-              <li class="tags">html</li>
-            </ul>
-            <button class="buttons">See Project</button>
-          </div>
-        </li>
-        <li class="work">
-          <img src="#" alt="project image" />
-          <div>
-            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-            <ul class="list-tag">
-              <li class="tags">Ruby on rails</li>
-              <li class="tags">css</li>
-              <li class="tags">JavaScript</li>
-              <li class="tags">html</li>
-            </ul>
-            <button class="buttons">See Project</button>
-          </div>
-        </li>
-        <li class="work">
-          <img src="#" alt="project image" />
-          <div>
-            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-            <ul class="list-tag">
-              <li class="tags">Ruby on rails</li>
-              <li class="tags">css</li>
-              <li class="tags">JavaScript</li>
-              <li class="tags">html</li>
-            </ul>
-            <button class="buttons">See Project</button>
-          </div>
-        </li>
-        <li class="work">
-          <img src="#" alt="project image" />
-          <div>
-            <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
-            <ul class="list-tag">
-              <li class="tags">Ruby on rails</li>
-              <li class="tags">css</li>
-              <li class="tags">JavaScript</li>
-              <li class="tags">html</li>
-            </ul>
-            <button class="buttons">See Project</button>
-          </div>
-        </li>
-      </ul>
+      <div class="work-wrapper">
+        <h2 class="section-title">My Recent Works</h2>
+        <hr />
+        <ul>
+          <li class="work">
+            <img src="#" alt="project image" />
+            <div>
+              <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+              <ul class="list-tag">
+                <li class="tags">Ruby on rails</li>
+                <li class="tags">css</li>
+                <li class="tags">JavaScript</li>
+                <li class="tags">html</li>
+              </ul>
+              <button class="buttons">See Project</button>
+            </div>
+          </li>
+          <li class="work">
+            <img src="#" alt="project image" />
+            <div>
+              <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+              <ul class="list-tag">
+                <li class="tags">Ruby on rails</li>
+                <li class="tags">css</li>
+                <li class="tags">JavaScript</li>
+                <li class="tags">html</li>
+              </ul>
+              <button class="buttons">See Project</button>
+            </div>
+          </li>
+          <li class="work">
+            <img src="#" alt="project image" />
+            <div>
+              <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+              <ul class="list-tag">
+                <li class="tags">Ruby on rails</li>
+                <li class="tags">css</li>
+                <li class="tags">JavaScript</li>
+                <li class="tags">html</li>
+              </ul>
+              <button class="buttons">See Project</button>
+            </div>
+          </li>
+          <li class="work">
+            <img src="#" alt="project image" />
+            <div>
+              <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+              <ul class="list-tag">
+                <li class="tags">Ruby on rails</li>
+                <li class="tags">css</li>
+                <li class="tags">JavaScript</li>
+                <li class="tags">html</li>
+              </ul>
+              <button class="buttons">See Project</button>
+            </div>
+          </li>
+          <li class="work">
+            <img src="#" alt="project image" />
+            <div>
+              <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+              <ul class="list-tag">
+                <li class="tags">Ruby on rails</li>
+                <li class="tags">css</li>
+                <li class="tags">JavaScript</li>
+                <li class="tags">html</li>
+              </ul>
+              <button class="buttons">See Project</button>
+            </div>
+          </li>
+          <li class="work">
+            <img src="#" alt="project image" />
+            <div>
+              <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
+              <ul class="list-tag">
+                <li class="tags">Ruby on rails</li>
+                <li class="tags">css</li>
+                <li class="tags">JavaScript</li>
+                <li class="tags">html</li>
+              </ul>
+              <button class="buttons">See Project</button>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section id="about-me">
