Change list-work display type from flex to grid

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="work-wrapper">
         <h2 class="section-title">My Recent Works</h2>
         <hr />
-        <ul>
+        <ul class="list-work">
           <li class="work">
             <img src="#" alt="project image" />
             <div>
