finish about me section

--- a/index.html
+++ b/index.html
@@ -146,50 +146,52 @@
     </section>
 
     <section id="about-me">
-      <div class="resume">
-        <h2 class="section-title">About me</h2>
-        <p>
-          Who am I? A conscientious Full Stack Web Developer. Tech enthusiast
-          looking for a challenge. If you like what you see and have a project
-          that needs to be coded in an organized, conscientious, and dynamic
-          way. Do not hesitate to contact me.
-        </p>
-        <button class="buttons">Get My Resume</button>
+      <div class="about-me-wrapper">
+        <div class="resume">
+          <h2 class="section-title">About me</h2>
+          <p>
+            Who am I? A conscientious Full Stack Web Developer. Tech enthusiast
+            looking for a challenge. If you like what you see and have a project
+            that needs to be coded in an organized, conscientious, and dynamic
+            way. Do not hesitate to contact me.
+          </p>
+          <button class="buttons">Get My Resume</button>
+        </div>
+        <ul class="list-skill">
+          <li class="skill">
+            <img src="images/IconSkill.png" alt="" />
+            <h3>Languages</h3>
+            <ul class="list-tag">
+              <li class="tags">JavaScript</li>
+              <li class="tags">Ruby</li>
+              <li class="tags">Html</li>
+              <li class="tags">Css</li>
+            </ul>
+          </li>
+          <li class="skill">
+            <img src="images/IconFramework.png" alt="" />
+            <h3>Frameworks</h3>
+            <ul class="list-tag">
+              <li class="tags">Bootstrap</li>
+              <li class="tags">Ruby on rails</li>
+              <li class="tags">RSpec</li>
+              <li class="tags">Capybara</li>
+              <li class="tags">Selenium</li>
+            </ul>
+          </li>
+          <li class="skill">
+            <img src="images/Icon Langguage.png" alt="" />
+            <h3>Skills</h3>
+            <ul class="list-tag">
+              <li class="tags">Codekit</li>
+              <li class="tags">GitHub</li>
+              <li class="tags">Codepen</li>
+              <li class="tags">Gitlab</li>
+              <li class="tags">Terminal</li>
+            </ul>
+          </li>
+        </ul>
       </div>
-      <ul class="skills">
-        <li class="skill">
-          <img src="images/IconSkill.png" alt="" />
-          <h3>Languages</h3>
-          <ul class="list-tag">
-            <li class="tags">JavaScript</li>
-            <li class="tags">Ruby</li>
-            <li class="tags">Html</li>
-            <li class="tags">Css</li>
-          </ul>
-        </li>
-        <li class="skill">
-          <img src="images/IconFramework.png" alt="" />
-          <h3>Frameworks</h3>
-          <ul class="list-tag">
-            <li class="tags">Bootstrap</li>
-            <li class="tags">Ruby on rails</li>
-            <li class="tags">RSpec</li>
-            <li class="tags">Capybara</li>
-            <li class="tags">Selenium</li>
-          </ul>
-        </li>
-        <li class="skill">
-          <img src="images/Icon Langguage.png" alt="" />
-          <h3>Skills</h3>
-          <ul class="list-tag">
-            <li class="tags">Codekit</li>
-            <li class="tags">GitHub</li>
-            <li class="tags">Codepen</li>
-            <li class="tags">Gitlab</li>
-            <li class="tags">Terminal</li>
-          </ul>
-        </li>
-      </ul>
     </section>
 
     <footer>
