--- a/index.html
+++ b/index.html
@@ -195,41 +195,42 @@
     </section>
 
     <footer>
-      <h2 class="section-title">
-        I'm always interested in hearing about new projects, so if you'd like to
-        chat please get in touch.
-      </h2>
-      <form action="https://formspree.io/f/xoqbpave" method="POST">
-        <label for="name">
-          <input
-            id="name"
-            type="text"
-            placeholder="Name"
-            name="name"
-            maxlength="30"
-            required
-          />
-        </label>
-        <label for="email">
-          <input
-            id="email"
-            type="email"
-            placeholder="exmple@exemple.com"
-            name="email"
-            required
-          />
-        </label>
-        <label for="message">
-          <textarea
-            id="message"
-            maxlength="500"
-            placeholder="your message ..."
-            required
-          ></textarea>
-        </label>
-        <button type="submit" class="buttons btn-contact">Get in touch</button>
-      </form>
-
+      <div class="footer-wrapper">
+        <h2 class="section-title">
+          I'm always interested in hearing about new projects, so if you'd like to
+          chat please get in touch.
+        </h2>
+        <form action="https://formspree.io/f/xoqbpave" method="POST">
+          <label for="name">
+            <input
+              id="name"
+              type="text"
+              placeholder="Name"
+              name="name"
+              maxlength="30"
+              required
+            />
+          </label>
+          <label for="email">
+            <input
+              id="email"
+              type="email"
+              placeholder="exmple@exemple.com"
+              name="email"
+              required
+            />
+          </label>
+          <label for="message">
+            <textarea
+              id="message"
+              maxlength="500"
+              placeholder="your message ..."
+              required
+            ></textarea>
+          </label>
+          <button type="submit" class="buttons btn-contact">Get in touch</button>
+        </form>
+      </div>
       <ul class="social-icons">
         <li><a href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
         <li><a href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
