add images to project in work section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <hr />
         <ul class="list-work">
           <li class="work">
-            <img src="#" alt="project image" />
+            <img src="images/Project1.png" alt="project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -77,7 +77,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="#" alt="project image" />
+            <img src="images/Project2.png" alt="project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -90,7 +90,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="#" alt="project image" />
+            <img src="images/Project3.png" alt="project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -103,7 +103,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="#" alt="project image" />
+            <img src="images/Project4.png" alt="project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -116,7 +116,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="#" alt="project image" />
+            <img src="images/Project5.png" alt="project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -129,7 +129,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="#" alt="project image" />
+            <img src="images/Project6.png" alt="project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
