--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
     <section id="headline">
       <div class="headline-wrapper">
         <h1 class="section-title">
-          Hi there. I'm Allassane<br/><span>full stack Web Developer</span>
+          Hi there. I'm Allassane<br /><span>full stack Web Developer</span>
         </h1>
         <p>
-          I can help you build a website from front-end to back-end, Look through
-          some of my work and experience! If you like what you see and have a
-          project that needs to be coded, don’t hestiate to contact me.
+          I can help you build a website from front-end to back-end, Look
+          through some of my work and experience! If you like what you see and
+          have a project that needs to be coded, don’t hestiate to contact me.
         </p>
         <ul>
           <li>
             <a
               class="social"
               href="https://www.linkedin.com/in/allassane-dicko-744aaa224"
-              ><i class="fa-brands fa-linkedin"></i
+              ><i class="social-icon fa-brands fa-linkedin"></i
             ></a>
           </li>
           <li>
             <a class="social" href="https://github.com/Trast00"
-              ><i class="fa-brands fa-github"></i
+              ><i class="social-icon fa-brands fa-github"></i
             ></a>
           </li>
           <li>
             <a class="social" href="https://twitter.com/AllassaneDicko0/"
-              ><i class="fa-brands fa-twitter"></i
+              ><i class="social-icon fa-brands fa-twitter"></i
             ></a>
           </li>
         </ul>
-        <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>  
+        <a class="btn-round" href="#"><i class="fa-solid fa-angle-down"></i></a>
       </div>
     </section>
 
@@ -198,8 +198,8 @@
       <div class="footer-wrapper">
         <div class="contact-wrapper">
           <h2 class="section-title">
-            I'm always interested in hearing about new projects, so if you'd like to
-            chat please get in touch.
+            I'm always interested in hearing about new projects, so if you'd
+            like to chat please get in touch.
           </h2>
           <form action="https://formspree.io/f/xoqbpave" method="POST">
             <label for="name">
@@ -229,14 +229,28 @@
                 required
               ></textarea>
             </label>
-            <button type="submit" class="buttons btn-contact">Get in touch</button>
+            <button type="submit" class="buttons btn-contact">
+              Get in touch
+            </button>
           </form>
         </div>
       </div>
       <ul class="social-icons">
-        <li><a href="https://www.linkedin.com/in/allassane-dicko-744aaa224"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="https://github.com/Trast00"><i class="fa-brands fa-github"></i></a></li>
-        <li><a href="https://twitter.com/AllassaneDicko0/"><i class="fa-brands fa-twitter"></i></a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/allassane-dicko-744aaa224"
+            ><i class="social-icon fa-brands fa-linkedin"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://github.com/Trast00"
+            ><i class="social-icon fa-brands fa-github"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://twitter.com/AllassaneDicko0/"
+            ><i class="social-icon fa-brands fa-twitter"></i
+          ></a>
+        </li>
       </ul>
       <p class="my-email">dickoallassane1997@gmail.com</p>
     </footer>
