Accessibility change: change footer heading from h2 to h3

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/a1c06e2fcd.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/a1c06e2fcd.js" crossorigin="anonymous"></script>
     <title>Allassane Portfolios</title>
   </head>
   <body>
@@ -64,7 +61,7 @@
         <hr />
         <ul class="list-work">
           <li class="work">
-            <img src="images/Project1.png" alt="project image" />
+            <img src="images/Project1.png" alt="Project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -197,10 +194,10 @@
     <footer>
       <div class="footer-wrapper">
         <div class="contact-wrapper">
-          <h2 class="section-title">
+          <h3 class="section-title">
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
-          </h2>
+          </h3>
           <form action="https://formspree.io/f/xoqbpave" method="POST">
             <label for="name">
               <input
