Accessibility: change text font-size and line-height unit of mesure from px to rem

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="images/Project2.png" alt="project image" />
+            <img src="images/Project2.png" alt="Project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -87,7 +87,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="images/Project3.png" alt="project image" />
+            <img src="images/Project3.png" alt="Project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -100,7 +100,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="images/Project4.png" alt="project image" />
+            <img src="images/Project4.png" alt="Project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -113,7 +113,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="images/Project5.png" alt="project image" />
+            <img src="images/Project5.png" alt="Project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -126,7 +126,7 @@
             </div>
           </li>
           <li class="work">
-            <img src="images/Project6.png" alt="project image" />
+            <img src="images/Project6.png" alt="Project image" />
             <div>
               <h2 class="section-title">Multi-Post Stories Gain+Glory</h2>
               <ul class="list-tag">
@@ -156,7 +156,7 @@
         </div>
         <ul class="list-skill">
           <li class="skill">
-            <img src="images/IconSkill.png" alt="" />
+            <img src="images/IconSkill.png" alt="" /> <!-- Decorative image -->
             <h3>Languages</h3>
             <ul class="list-tag">
               <li class="tags">JavaScript</li>
@@ -166,7 +166,7 @@
             </ul>
           </li>
           <li class="skill">
-            <img src="images/IconFramework.png" alt="" />
+            <img src="images/IconFramework.png" alt="" /> <!-- Decorative image -->
             <h3>Frameworks</h3>
             <ul class="list-tag">
               <li class="tags">Bootstrap</li>
@@ -177,7 +177,7 @@
             </ul>
           </li>
           <li class="skill">
-            <img src="images/Icon Langguage.png" alt="" />
+            <img src="images/Icon Langguage.png" alt="" /> <!-- Decorative image -->
             <h3>Skills</h3>
             <ul class="list-tag">
               <li class="tags">Codekit</li>
