--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1><a href="#">Welcome</a></h1>
       <nav>
         <ul>
-          <li>Portfolio</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
       <a class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></a>
@@ -155,7 +155,7 @@
           <button class="buttons">Get My Resume</button>
         </div>
         <ul class="list-skill">
-          <li class="skill">
+          <li class="skill" tabindex="0">
             <img src="images/IconSkill.png" alt="" /> <!-- Decorative image -->
             <h3>Languages</h3>
             <ul class="list-tag">
@@ -165,7 +165,7 @@
               <li class="tags">Css</li>
             </ul>
           </li>
-          <li class="skill">
+          <li class="skill" tabindex="0">
             <img src="images/IconFramework.png" alt="" /> <!-- Decorative image -->
             <h3>Frameworks</h3>
             <ul class="list-tag">
@@ -176,7 +176,7 @@
               <li class="tags">Selenium</li>
             </ul>
           </li>
-          <li class="skill">
+          <li class="skill" tabindex="0">
             <img src="images/Icon Langguage.png" alt="" /> <!-- Decorative image -->
             <h3>Skills</h3>
             <ul class="list-tag">
