add scripte.js file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/a1c06e2fcd.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <title>Allassane Portfolios</title>
   </head>
   <body>
