add Mobile Menu animation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/a1c06e2fcd.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Allassane Portfolios</title>
   </head>
   <body>
@@ -15,9 +15,9 @@
       <h1><a href="#">Welcome</a></h1>
       <nav id="desktop-nav">
         <ul>
-          <li><a href="#works">Portfolio</a></li>
-          <li><a href="#about-me">About</a></li>
-          <li><a href="#footer">Contact</a></li>
+          <li><a id="works-desktop-menu-item" href="#works">Portfolio</a></li>
+          <li><a id="about-me-desktop-menu-item" href="#about-me">About</a></li>
+          <li><a id="footer-desktop-menu-item" href="#footer">Contact</a></li>
         </ul>
       </nav>
       <div id="open-menu" class="toggleNav" href="#"><i class="fa-solid fa-bars"></i></div>
@@ -201,7 +201,7 @@
       </div>
     </section>
 
-    <footer>
+    <footer id="footer">
       <div class="footer-wrapper">
         <div class="contact-wrapper">
           <h3 class="section-title">
