On click mobile menu items close Menu

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <nav id="mobile-nav">
         <div id="close-menu" class="toggleNav" href="#"><i class="fa-solid fa-xmark"></i></div>
         <ul>
-          <li><a href="#works">Portfolio</a></li>
-          <li><a href="#about-me">About</a></li>
-          <li><a href="#footer">Contact</a></li>
+          <li><a id="works-mobile-menu-item" href="#works">Portfolio</a></li>
+          <li><a id="about-me-mobile-menu-item" href="#about-me">About</a></li>
+          <li><a id="footer-mobile-menu-item" href="#footer">Contact</a></li>
         </ul>
       </nav>
     </header>
