Add project details feature to mobile version

--- a/index.html
+++ b/index.html
@@ -152,6 +152,23 @@
       </div>
     </section>
 
+    <div class="work-detail-wrapper hidden">
+      <div class="work-detail">
+        <img src="images/Project1.png" alt="Project image">
+        <h2>Keeping track of hundreds of components</h2>
+        <ul class="list-tag">
+          <li class="tags">Ruby on rails</li>
+          <li class="tags">css</li>
+          <li class="tags">JavaScript</li>
+          <li class="tags">html</li>
+        </ul>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the relea
+        </p>
+        <button class="buttons">See Live</button>
+        <button class="buttons">See Source</button>
+      </div>
+    </div>
+
     <section id="about-me">
       <div class="about-me-wrapper">
         <div class="resume">
