Destok version of Work Detail

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
     <div class="work-detail-wrapper hidden">
       <div class="work-detail">
+        <div class="row"><div class="close-icon"><i class="fa-solid fa-xmark"></i></div></div>
         <img src="images/Project1.png" alt="Project image">
         <h2>Keeping track of hundreds of components</h2>
         <ul class="list-tag">
@@ -162,10 +163,12 @@
           <li class="tags">JavaScript</li>
           <li class="tags">html</li>
         </ul>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the relea
+        <p id="work-detail-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the releaLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it 1960s with the relea
         </p>
-        <button class="buttons">See Live</button>
-        <button class="buttons">See Source</button>
+        <div class="btn-group">
+          <button class="buttons"><p>See Live</p><img src="images/iconsLive.png" alt=""></button>
+          <button class="buttons"><p>See Source</p><i class="fa-brands fa-github"></i></button>
+        </div>
       </div>
     </div>
 
