--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
           </h3>
-          <form action="https://formspree.io/f/xoqbpave" method="POST">
+          <form id="form" action="https://formspree.io/f/xoqbpave" method="POST">
             <label for="name">
               <input
                 id="name"
@@ -158,6 +158,7 @@
                 required
               ></textarea>
             </label>
+            <span id="error" class="error" aria-live="polite">ssdsds</span>
             <button type="submit" class="buttons btn-contact">
               Get in touch
             </button>
