Add styling to contact-validation form

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 required
               ></textarea>
             </label>
-            <span id="error" class="error" aria-live="polite">ssdsds</span>
+            <span id="error" class="error" aria-live="polite"></span>
             <button type="submit" class="buttons btn-contact">
               Get in touch
             </button>
